syntax="proto3";

import "google/protobuf/struct.proto";

service WaterController {
    rpc AddControllers (Configurations) returns (Status) {}
    rpc GetValues (Configuration) returns (Values) {}
}

message Input {
    google.protobuf.Struct properties = 1;
}

message Output {
    google.protobuf.Struct properties = 1;
}

message Controller {
    google.protobuf.Struct properties = 1;
}

message Configuration {
    Input input = 1;
    Output output = 2;
    Controller controller = 3;
}

message Configurations {
    repeated Configuration configurations = 1;
}

message Status {
    bool ok = 2;
}

message Value {
    string device = 3;
    float value = 4;
}

message Values {
    repeated Value values = 5;
}
